prerender: Don't set the priority to net::IDLE on Android.

Resource requests issued by prerendering renderers have their priority
set to net::IDLE. This causes issues with content::ResourceScheduler,
leading to very poor loading performance for prerendered content.

This simply disables the prioritization on Android, as this is where the
priority lowering is the most problematic, and where potential downsides
from this patch are the most limited. This is a temporary fix.

BUG=652746

Review-Url: https://codereview.chromium.org/2399973003
Cr-Commit-Position: refs/heads/master@{#424131}

Former-commit-id: 915cfe1d23cf249cff0b51b6f2a7434035d5e6c5